GSSO-629 Use Ignite to store sessions